--- a/devfiles/python-thoth/devfile.yaml
+++ b/devfiles/python-thoth/devfile.yaml
@@ -6,7 +6,9 @@ starterProjects:
   - name: thoth-cli-examples
     git:
       remotes:
-        origin: https://github.com/thoth-station/cli-examples
+        origin: https://github.com/goern/thoth-cli-examples
+      checkoutFrom:
+        revision: add-flask
 components:
   - name: app
     container:
@@ -15,7 +17,7 @@ components:
 commands:
   - id: install-dependencies
     exec:
-      commandLine: pipenv install
+      commandLine: micropipenv install
       group:
         kind: build
         isDefault: true
@@ -28,3 +30,10 @@ commands:
       group:
         kind: run
         isDefault: true
+  - id: debugpy
+    exec:
+      commandLine: "pip install --user debugpy && python -m debugpy --listen 0.0.0.0:${DEBUG_PORT} app.py"
+      workingDir: ${PROJECTS_ROOT}
+      component: app
+      group:
+        kind: debug
